# 2DImageprocessing

./: .bash_history  .gitignore  01-network-manager-all.yaml  BUILD-DOCKER-IMAGE.sh  README.md  RESTART-DOCKER-CONTAINER.sh  RUN-DOCKER-CONTAINER.sh  STOP-DOCKER-IMAGE.sh
ROS_Foxy_Utility_Code/src/spawn_entity/: CMakeLists.txt  package.xml
ROS_Foxy_Utility_Code/src/spawn_entity/launch/: spawn_entity.launch.py
ROS_Foxy_Utility_Code/src/spawn_entity/scripts/: spawn_entity_node.py
docker/: Dockerfile  default_vim_rc  docker-compose.yml  dockerfile
kill/: rc_visard.sh  realsense.sh  robotic2fControl.sh
overwrite/ur_description/urdf/: ur.urdf.xacro  ur_macro.xacro
overwrite/ur_robot_driver/resources/: ros_control.urscript
overwrite/ur_robot_driver/src/: hardware_interface.cpp
ros2_ws/src/ImgPro/: CMakeLists.txt  package.xml
ros2_ws/src/ImgPro/launch/: Test.launch.py
ros2_ws/src/ImgPro/scripts/: DMCReader.py  Homography.py  ImageRegistration.py  VideoMonitor2D.py  VideoPublisher2D.py  webcam.sh
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/modproft_adapter_description/: CMakeLists.txt
ros2_ws/src/modproft_adapter_description/config/: adapter_bmt135_bmt172.yaml  adapterbox.yaml  adapterbox_bf_tech_klein.yaml  adapterbox_controller_bf_tech_klein.yaml
ros2_ws/src/modproft_adapter_description/launch/: spawn_adapter.launch.py
ros2_ws/src/modproft_adapter_description/urdf/: adapterbox.sdf.xacro  adapterbox.urdf.xacro
ros2_ws/src/modproft_adapter_description/urdf/inc/: adapter_common.xacro  adapterbox_common.xacro  adapterbox_transmission.xacro
ros2_ws/src/modproft_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/modproft_bringup/launch/: real_bringup.launch.py  sim_bringup.launch.py
ros2_ws/src/modproft_camera_description/: CMakeLists.txt  package.xml
ros2_ws/src/modproft_camera_description/config/: canon_powershot_g7_mk3.yaml
ros2_ws/src/modproft_camera_description/launch/: _spawn_camera.launch.py
ros2_ws/src/modproft_camera_description/meshes/Canon_Powershot_G7_MKIII/: canon_powershot_g7_mkiii_collision.stl
ros2_ws/src/modproft_camera_description/meshes/Debug_Mesh/: camera_arrow.stl
ros2_ws/src/modproft_camera_description/urdf/: _camera.urdf.xacro  camera_macro.xacro  camera_macro_depreached.xacro
ros2_ws/src/modproft_camera_description/urdf/inc/: camera_common.xacro
ros2_ws/src/modproft_common/: CMakeLists.txt  package.xml
ros2_ws/src/modproft_common/config/: colors.yaml
ros2_ws/src/modproft_common/urdf/: common_material_macro.xacro
ros2_ws/src/modproft_cv/: CMakeLists.txt  package.xml
ros2_ws/src/modproft_cv/launch/: Test.launch.py
ros2_ws/src/modproft_cv/scripts/: DMCReader.py  Homography.py  Pipeline.py  VideoMonitor2D.py  VideoPublisher2D.py  add.py  webcam.sh
ros2_ws/src/modproft_manipulator_description/: CMakeLists.txt  package.xml
ros2_ws/src/modproft_manipulator_description/config/: manipulator_klinke_v2.yaml
ros2_ws/src/modproft_manipulator_description/urdf/: manipulator_macro.xacro
ros2_ws/src/modproft_pcb_description/: CMakeLists.txt
ros2_ws/src/modproft_pcb_description/config/: bmt172_controller.yaml
ros2_ws/src/modproft_pcb_description/launch/: spawn_multiple_pcb.launch.py
ros2_ws/src/modproft_pcb_description/urdf/: pcb.urdf.xacro
ros2_ws/src/modproft_robot_control/: CMakeLists.txt  package.xml
ros2_ws/src/modproft_robot_control/include/modproft_robot_control/: robot_controller.hpp
ros2_ws/src/modproft_robot_control/scripts/: moveit_action_client.py
ros2_ws/src/modproft_robot_control/src/: moveit_action_server.cpp  robot_controller.cpp
ros2_ws/src/modproft_robot_control_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/modproft_robot_control_msgs/action/: MoveCartesian.action  MoveTCP.action
ros2_ws/src/modproft_table_description/: CMakeLists.txt  package.xml
ros2_ws/src/modproft_table_description/config/: adapter_table.yaml  box.yaml
ros2_ws/src/modproft_table_description/launch/: spawn_table.launch.py
ros2_ws/src/modproft_table_description/urdf/: _table.urdf.xacro  table_macro.xacro
ros2_ws/src/modproft_ur_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/modproft_ur_bringup/config/: sensors_3d.yaml  sensors_3d_depreached.yaml  sim_controllers.yaml  sim_ur_controllers.yaml  ur_controllers.yaml
ros2_ws/src/modproft_ur_bringup/launch/: control.launch.py  real_ur_bringup.launch.py  real_ur_control.launch.py_depr  sim_bringup.launch.py  sim_control.launch.py  sim_control.launch.py_depr  ur_bringup.launch.py  ur_control.launch.py  ur_moveit.launch.py
ros2_ws/src/modproft_ur_description/: CMakeLists.txt  package.xml
ros2_ws/src/modproft_ur_description/config/: initial_positions.yaml
ros2_ws/src/modproft_ur_description/urdf/: ur.urdf.xacro
ros2_ws/src/modproft_ur_moveit_config/: setup.cfg  setup.py
ros2_ws/src/modproft_ur_moveit_config/launch/: ur_moveit.launch.py
ros2_ws/src/modproft_ur_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
ros2_ws/src/pointcloud_pub/: CMakeLists.txt  package.xml
ros2_ws/src/pointcloud_pub/src/: pcd_publisher.cpp
ros2_ws/src/rcontrol_msgs/: CMakeLists.txt
ros2_ws/src/rcontrol_msgs/action/: MoveJoint.action
ros2_ws/src/robotcontrol/: CMakeLists.txt  package.xml
ros2_ws/src/robotcontrol/scripts/: moveit_action_client.py
ros2_ws/src/robotcontrol/src/: moveit_action_server.cpp
run/shm/: ad_556_gsystem_shm  ad_connect_queue_1577_0_shm  ad_connect_queue_1877_0_shm  ad_connect_queue_720_0_shm  ad_mailbox_1577_0_0_shm  ad_mailbox_1577_0_1_shm  ad_mailbox_1877_0_0_shm  ad_mailbox_1877_0_1_shm  ad_mailbox_1884_0_0_shm  ad_mailbox_720_0_0_shm  ad_mailbox_720_0_1_shm  ad_mailbox_720_0_2_shm  ad_mailbox_720_0_3_shm  ad_mailbox_720_0_4_mtx  ad_mailbox_720_0_4_shm  ad_mailbox_720_0_5_shm
run/systemd/resolve/: stub-resolv.conf
share/: .gitkeep  test
ur_driver_override/include/ur_robot_driver/: hardware_interface.hpp
ur_driver_override/resources/: ros_control.urscript
ur_driver_override/src/: hardware_interface.cpp
(+123 files in other folders)
