<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modproft_cv</name>
  <version>0.0.0</version>
  <description>Computer vision package for TTZ Noerdlingen Project ModProFT</description>
  <maintainer email="vinajaka.bhat@hs-augsburg.de">Vinajaka Bhat</maintainer>
  <maintainer email="maximilian.schnitzler@hs-augsburg.de">Max Schnitzler</maintainer>

  <author email="vinajaka.bhat@hs-augsburg.de">Vinajaka Bhat</author>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!--depend>rclcpp</depend-->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
