<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modproft_ur_bringup</name>
  <version>0.0.0</version>
  <description>Universal Robot bring up</description>
  <maintainer email="Maximilian.Schnitzler@HS-Augsburg.de">Max Schnitzler</maintainer>
  <license>confidential</license>

  <build_depend>eigen</build_depend>
  <build_depend>moveit_common</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rosbag2</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
